Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignTextTextObjWrapped.quorum
class Main
    action Main
        Text t
        t:SetValue("t")
        text txt = t
        output txt
    end
end