Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjTextObjWrapped.quorum
class main
    action main
        Text t
        t:setValue("what?")
        Boolean b = t
    end
end